<resources>
    <string name="app_name">assignment_nav_frag</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

        <string name="calculator">Calculator</string>
        <string name="mode_standard">Standard</string>
        <string name="mode_science">Science</string>
        <string name="mode_graphs">Graphs</string>
        <string name="mode_dev">Developer</string>
        <string name="mode_date">Date</string>
        <string name="trans">Trans</string>
        <string name="money">Money</string>

        <string name="navi_open">Open navigation</string>
        <string name="navi_close">Close navigation</string>
        <!-- Standard Cal -->
        <string name="Zero">0</string>
        <string name="One">1</string>
        <string name="Two">2</string>
        <string name="Three">3</string>
        <string name="Four">4</string>
        <string name="Five">5</string>
        <string name="Six">6</string>
        <string name="Seven">7</string>
        <string name="Eight">8</string>
        <string name="Nine">9</string>

        <string name="Multi">*</string>
        <string name="Div">/</string>
        <string name="Plus">+</string>
        <string name="Minus">-</string>
        <string name="Equal">=</string>

        <string name="back_space"> </string>
        <string name="Dot">.</string>

        <string name="clear">C</string>
        <string name="clear_entry">CE</string>
        <string name="parentheses">()</string>
        <string name="calculation"> </string>
        <string name="result"> </string>
        <string name="backspace">backspace</string>
        <string name="changeOp">+/-</string>
        <string name="fraction">1/x</string>
        <string name="square">x^2</string>
        <string name="cube">x^3</string>
        <string name="root">√x</string>
        <string name="cuberoot">∛x</string>
        <string name="pencent">%</string>
        <string name="hello_blank_fragment">Hello blank fragment</string>
        <string name="e">e</string>
        <string name="second_option">2nd</string>
        <string name="pi">𝛑</string>
        <string name="ClearEntry">CE</string>
        <string name="ln">ln</string>
        <string name="log">Log</string>
        <!--0000000000000000000000000000000-->


    <string name="title">Chuyển hệ cơ số</string>
    <string name="state">Enter number</string>
    <string name="first_text">Chọn hệ đầu :</string>
    <string name="second_text">Chọn hệ sau :</string>
    <string name="enter">Enter</string>
    <string name="result1">Kết quả</string>

    <string-array name="type">
        <item>BIN</item>
        <item>OCT</item>
        <item>DEC</item>
        <item>HEX</item>
    </string-array>


</resources>