<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.gallery.GalleryFragment"
    android:background="#ececec">


    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="409dp"
        android:layout_height="0dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/percent"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/pencent"
                android:textColor="#000000"
                android:textSize="24sp"
                />

            <Button
                android:id="@+id/Clear_EntryBTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/clear_entry"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textColor="#000000"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:background="@drawable/button"
                android:textSize="24sp"
                />

            <Button
                android:id="@+id/Clear"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/clear"
                android:textColor="#000000"
                android:textSize="24sp"
                />

            <ImageButton
                android:id="@+id/back_space"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:contentDescription="@string/backspace"
                app:srcCompat="@drawable/ic_backspace_foreground"
                />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/fraction"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/fraction"
                android:textColor="#000000"
                android:textSize="24sp"
                />

            <Button
                android:id="@+id/square"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/square"
                android:textColor="#000000"
                android:textSize="24sp"
                />

            <Button
                android:id="@+id/root"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/root"
                android:textColor="#000000"
                android:textSize="24sp"
                />

            <Button
                android:id="@+id/DivBTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Div"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textColor="#000000"
                android:background="@drawable/button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textSize="24sp"
                />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/Seven"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/Seven"
                android:textColor="#000000"
                android:textSize="24sp"
                />

            <Button
                android:id="@+id/Eight"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:text="@string/Eight"
                android:textColor="#000000"
                android:textSize="24sp"
                />

            <Button
                android:id="@+id/Nine"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/Nine"
                android:textColor="#000000"
                android:textSize="24sp"
                android:background="@drawable/button"
                />

            <Button
                android:id="@+id/MultiBTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Multi"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textColor="#000000"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textSize="24sp"
                android:background="@drawable/button"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/Four"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/Four"
                android:textColor="#000000"
                android:textSize="24sp"
                android:background="@drawable/button"
                />

            <Button
                android:id="@+id/Five"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/Five"
                android:textColor="#000000"
                android:textSize="24sp"
                android:background="@drawable/button"
                />

            <Button
                android:id="@+id/Six"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/Six"
                android:textColor="#000000"
                android:textSize="24sp"
                android:background="@drawable/button"
                />

            <Button
                android:id="@+id/MinusBTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Minus"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textColor="#000000"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textSize="24sp"
                android:background="@drawable/button"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/One"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/One"
                android:textColor="#000000"
                android:textSize="24sp"
                android:background="@drawable/button"
                />

            <Button
                android:id="@+id/Two"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/Two"
                android:textColor="#000000"
                android:textSize="24sp"
                android:background="@drawable/button"
                />

            <Button
                android:id="@+id/Three"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/Three"
                android:textColor="#000000"
                android:textSize="24sp"
                android:background="@drawable/button"
                />

            <Button
                android:id="@+id/PlusBTN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Plus"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textColor="#000000"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textSize="24sp"
                android:background="@drawable/button"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/changeOp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/changeOp"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textColor="#000000"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textSize="24sp"
                android:background="@drawable/button"

                tools:ignore="UsingOnClickInXml" />

            <Button
                android:id="@+id/Zero"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/Zero"
                android:textColor="#000000"
                android:textSize="24sp"
                android:background="@drawable/button"
                />

            <Button
                android:id="@+id/Dot"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/Dot"
                android:textColor="#000000"
                android:textSize="24sp"
                android:background="@drawable/button"
                />

            <Button
                android:id="@+id/Equal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Equal"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:textColor="#000000"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:textSize="24sp"
                android:background="@drawable/button"
                />
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/calculation_standard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:inputType="number"
        android:text="@string/calculation"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="end"/>

    <EditText
        android:id="@+id/result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:inputType="number"
        android:text="@string/result"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculation_standard"
        app:layout_constraintVertical_bias="0.0"
        android:gravity="end"/>

</androidx.constraintlayout.widget.ConstraintLayout>